--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>CJW</title>
 </head>
 <body>
-	<p>Hello - my name is C!</p>
+	<p>Hello - my name is CJ!</p>
 </body>
 </html>
